--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,5 @@
 nav ul {
     display: flex;
-    /* position: relative; */
-    /* z-index: 2; */
     justify-content: space-evenly;
     height: 5em;
     align-items: center;
@@ -20,26 +18,7 @@ nav a{
     
 }
 
-/* #transp{
-    width: 100vw;
-    height: 5em;
-    background-color: rgb(138, 138, 138);
-    opacity: 50%;
-    margin-top: 2.5em;
-} */
-
-
-/* #menu{
-    z-index: 3;
-} */
-
-
-
-/* #bloc{
-    display: flex;
-    width: 100vw;
-    height: 5em;
-    background-color: rgb(207, 59, 59);
-    opacity: 20%;
-    margin-top: 2.5em;
-} */
+#logo{
+    width: 3em;
+    height: auto;
+}
